# homekit-mcp

./: .gitignore  PROTOCOL.md
app/HomeCast.xcodeproj/project.xcworkspace/xcuserdata/r.parker.xcuserdatad/: UserInterfaceState.xcuserstate
app/HomeKitMCP.xcodeproj/project.xcworkspace/xcuserdata/r.parker.xcuserdatad/: UserInterfaceState.xcuserstate
app/Homecast.xcodeproj/: project.pbxproj
app/Homecast.xcodeproj/xcshareddata/xcschemes/: HomeCast.xcscheme
app/Homecast.xcodeproj/xcuserdata/r.parker.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Resources/: Homecast.entitlements
app/Sources/App/: AppDelegate.swift  ConnectionManager.swift  HomeCastApp.swift  HomecastApp.swift
app/Sources/HomeKit/: CharacteristicMapper.swift  HomeKitManager.swift  Models.swift
app/Sources/MenuBarPlugin/: MenuBarPlugin.swift
app/Sources/WebSocket/: WebSocketClient.swift
server/: .env.example  .gitignore  cloudbuild.yaml  pyproject.toml
server/homecast/: app.py  config.py  home_app.py  homes_app.py
server/homecast/api/: api.py  home.py  homes.py
server/homecast/mcp/: __init__.py  api.py  context.py  handler.py
server/homecast/models/db/: database.py  models.py
server/homecast/models/db/repositories/: __init__.py  device_repository.py  home_repository.py  session_repository.py  topic_slot_repository.py
server/homecast/websocket/: handler.py  pubsub_router.py  web_clients.py
server/homekit_mcp/api/: api.py
server/homekit_mcp/websocket/: handler.py
server/tests/: sample_home_output.json  test_home_api.py  test_mcp_handler.py
